--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=61beca755e319b4491ac77d1b1e12efe&libraries=services"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   </body>
 </html>
